# ConverterPIX

./: .gitignore  CMakeLists.txt  README.md
src/: callbacks.cpp  callbacks.h  config.cpp  config.h  prerequisites.cpp  prerequisites.h  resource_lib.cpp  resource_lib.h  version.h
src/cmd/: _main.cpp
src/fs/: file.cpp  file.h  filesystem.cpp  filesystem.h  hashfilesystem.cpp  hashfilesystem.h  hashfs_file.cpp  hashfs_file.h  sysfilesystem.cpp  sysfilesystem.h  sysfs_file.cpp  sysfs_file.h  uberfilesystem.cpp  uberfilesystem.h  zipfilesystem.cpp  zipfilesystem.h  zipfs_file.cpp  zipfs_file.h
src/libs/cityhash/: README.md  test_sse42.cpp  windows.bat
src/libs/fmt/: README.md  windows.bat
src/libs/glm/: README.md
src/libs/zlib/: README.md  windows.bat
src/material/: material.cpp  material.h
src/math/: aabox.h  matrix.h  quaternion.h  vector.h
src/model/: animation.cpp  animation.h  bone.h  collision.cpp  collision.h  locator.h  model.cpp  model.h  part.h  piece.cpp  piece.h
src/pix/: pix.cpp  pix.h
src/prefab/: curve.h  intersection.h  map_point.h  node.h  prefab.cpp  prefab.h  semaphore.h  sign.h  spawn_point.h  terrain_point_variant.h  trigger_point.h
src/structs/: dds.cpp  dds.h  hashfs.h  pma_0x03.h  pma_0x04.h  pmc.h  pmd.h  pmg_0x13.h  pmg_0x14.h  pmg_0x15.h  ppd_0x15.h  ppd_0x16.h  ppd_0x17.h  tobj.h  zip.h
src/texture/: texture.cpp  texture.h  texture_object.cpp  texture_object.h
src/utils/: explicit_singleton.h  hash.h  string_tokenizer.cpp  string_tokenizer.h  token.cpp  token.h  types.h
